--- a/CSS/Perfume_Project/index.html
+++ b/CSS/Perfume_Project/index.html
@@ -15,7 +15,7 @@
         <ul class="nav_item">
             <input type="text" id="" name="" class="nav_input"><button class="nav_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             <li class="home"><a href="index.html">Home</a></li>
-            <li><a href="index.html">Product</a></li>
+            <li><a href="product.html">Product</a></li>
             <li><a href="index.html">About</a></li>
             <li><a href="index.html">Contact</a></li>
             <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
@@ -69,61 +69,94 @@
         </div>
         <div>
             <a href=""><img src="images/top_ten_5.jpg" alt="" class="top_10_img"></a>
-            <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p>Asad Zanzibar</p>
+            <p class="brand_name">Lattafa</p>
+            <p class="rating">7.4 / 10 Ratings</p>
         </div>
         <div>
             <a href=""><img src="images/top_ten_6.jpg" alt="" class="top_10_img"></a>
-            <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p>Scandal pour Homme Absolu</p>
+            <p class="brand_name">Jean Paul Gaultier</p>
+            <p class="rating">7.8 / 10 Ratings</p>
         </div>
         <div>
             <a href=""><img src="images/top_ten_7.jpg" alt="" class="top_10_img"></a>
             <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p class="brand_name">Hermès</p>
+            <p class="rating">7.7 / 10 Ratings</p>
         </div>
         <div>
             <a href=""><img src="images/top_ten_8.jpg" alt="" class="top_10_img"></a>
-            <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p>Homme Anniversary</p>
+            <p class="brand_name">XerJoff</p>
+            <p class="rating">9.2 / 10 Ratings</p>
         </div>
         <div>
             <a href=""><img src="images/top_ten_9.jpg" alt="" class="top_10_img"></a>
-            <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p>L'Homme Idéal Parfum</p>
+            <p class="brand_name">Guerlain</p>
+            <p class="rating">8.4 / 10 Ratings</p>
         </div>
         <div>
             <a href=""><img src="images/top_ten_10.jpg" alt="" class="top_10_img"></a>
-            <p>LV Lovers</p>
-            <p class="brand_name">Louis Vuitton</p>
-            <p class="rating">7.5 / 10 Ratings</p>
+            <p>Gentleman Society</p>
+            <p class="brand_name">Givenchy</p>
+            <p class="rating">7.7 / 10 Ratings</p>
         </div>
     </div>
     <div class="detail">
-        <a href="" class="detail_btn">Explore Now</a>
+        <a href="product.html" class="detail_btn">Explore Now</a>
     </div>
     <!-- End Top 10 List -->
 
     <!-- Start Icon Line -->
-     <div>
-        <div>
-            
-        </div>
-     </div>
+    <div class="icon_line">
+        <div class="order_icon">
+            <span><i class=" icon fa-solid fa-truck fa-2x" ></i></span>
+            <p>
+                <span class="order_title">Fast & Free shipping</span>
+                <span>For order from $100</span>
 
+            </p>
+        </div>
+     
+        <div class="order_icon">
+            <span><i class=" icon fa-solid fa-phone-volume fa-2x"></i></span>
+            <p>
+                <span class="order_title">Fast & Free shipping</span>
+                <span>For order from $100</span>
+
+            </p>
+        </div>
+
+        <div class="order_icon">
+            <span><i class=" icon fa-solid fa-shield-halved fa-2x"></i></span>
+            <p>
+                <span class="order_title">Fast & Free shipping</span>
+                <span>For order from $100</span>
+
+            </p>
+        </div>
+
+        <div class="order_icon">
+            <span><i class=" icon fa-solid fa-gift fa-2x"></i></span>
+            <p>
+                <span class="order_title">Fast & Free shipping</span>
+                <span>For order from $100</span>
+
+            </p>
+        </div>
+    </div>
+    <div class="icon_line_clear"></div>
+
+    <!-- End Icon Line -->
 
     <!-- Start Season -->
      <h2 class="types_perfume">Types of Perfume</h2>
      <hr class="type_line">
-     <!-- End Season -->
 
-     <!-- Summer Collection -->
     <div class="season_type">
+        <!-- Start Summer Collection -->
         <div class="summer">
             <img src="images/summer_background.1.jpg" alt="" class="summer_img">
             <div class="summer_paragraph">
@@ -241,5 +274,50 @@
         <div class="clear"></div>
         <!-- End Nightout Collection -->
     </div>
+    <!-- End Season -->
+
+    <!-- start footer -->
+    <div class="footer_group">
+        <div class="footer">
+            <div class="footer_about">
+                <h2>Luxury Perfume</h2>
+                <hr class="footer_divided">
+                <ul>
+                    <li>
+                        Luxury Perfume acknowledges the traditional custodians of the land on which we operate and gather.
+                    </li>
+                    <li>
+                        We pay our respect to Elders past and present, and extend that respect to all Aboriginal and Torres Strait Islander peoples today.
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <a href="index.html" class="footer_nav">Home</a>
+                <a href="about.html" class="footer_nav">Contact</a>
+            </div>
+            <div>
+                <a href="product.html" class="footer_nav">Product</a>
+                <a href="news.html" class="footer_nav">About</a>
+                <a href="register.html" class="footer_nav">Register</a>
+            </div>
+            <div class="footer_adress">
+                <p><i class="fa-solid fa-house"></i> Pathein Township</p>
+                <p><i class="fa-solid fa-phone"></i> 09-957068157</p>
+                <p><i class="fa-solid fa-envelope"></i>  aunghtikelynn23599@gmail.com</p>
+            </div>
+        </div>
+        <div>
+            <p class="footer_social">
+                <a href=""><i class="fa-brands fa-facebook fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-twitter fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-youtube fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-tiktok fa-2x footer_icon"></i></a>
+            </p>
+            <hr class="divided">
+            <p class="the_end">&copy; 2024 Luxury Perfume | All right resereved</p>
+        </div>
+    </div>
+    <!-- end footer -->
 </body>
 </html>
