js_lecture and css project

--- a/CSS/Perfume_Project/index.html
+++ b/CSS/Perfume_Project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Perfume</title>
+    <link rel="icon" href="images/Logo_3.PNG">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="font/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="font/static">
@@ -16,8 +17,8 @@
             <input type="text" id="" name="" class="nav_input"><button class="nav_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             <li class="home"><a href="index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
-            <li><a href="index.html">About</a></li>
-            <li><a href="index.html">Contact</a></li>
+            <li><a href="ourstory.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
             <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
             <li><a href="index.html" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
@@ -29,8 +30,9 @@
     <div class="bunner">
         <img src="images/main_background.2.jpg" alt="" class="bunner_img">
         <div class="bunner_text">
-            <h1 class="bunner_heading">Your best scent secret</h1>
-            <p>* A collection of scent stories to enrich your olfactory life. Written by fragrance creators, for the curious noses.</p> 
+            <p class="bunner_heading">YOUR BEST</p>
+            <p class="bunner_heading">SCENT SECRET</p>
+            <p>A collection of scent stories to enrich your olfactory life.</p>
         </div>
     </div>
     <!-- End Bunner -->
@@ -44,7 +46,7 @@
     <hr class="hr_line">
     <div class="top_10_items">
         <div>
-            <a href=""><img src="images/top_ten_1.jpg" alt=""  class="top_10_img"></a>
+            <a href=""><img src="images/top_ten_1.1.jpg" alt=""  class="top_10_img"></a>
             <p>Perseus</p>
             <p class="brand_name">Parfums de Marly </p>
             <p class="rating">7.6 / 10 Ratings</p>
@@ -107,47 +109,30 @@
     <div class="detail">
         <a href="product.html" class="detail_btn">Explore Now</a>
     </div>
+    <div class="clear"></div>
     <!-- End Top 10 List -->
 
     <!-- Start Icon Line -->
-    <div class="icon_line">
-        <div class="order_icon">
-            <span><i class=" icon fa-solid fa-truck fa-2x" ></i></span>
-            <p>
-                <span class="order_title">Fast & Free shipping</span>
-                <span>For order from $100</span>
-
-            </p>
+    <div class="support">
+        <div>
+            <i class="fa-solid fa-truck-fast fa-2x"></i>
+            <p class="support_title">FAST SHIPPING</p>
+            <p>Same-day dispatch for orders placed</p>
+            <p>before 2pm.</p>
         </div>
-     
-        <div class="order_icon">
-            <span><i class=" icon fa-solid fa-phone-volume fa-2x"></i></span>
-            <p>
-                <span class="order_title">Fast & Free shipping</span>
-                <span>For order from $100</span>
-
-            </p>
+        <div>
+            <i class="fa-solid fa-arrow-rotate-left fa-2x"></i>
+            <p class="support_title">NO-HASSLE RETURNS</p>
+            <p>Return your order up to 30 days after</p>
+            <p>purchase.</p>
         </div>
-
-        <div class="order_icon">
-            <span><i class=" icon fa-solid fa-shield-halved fa-2x"></i></span>
-            <p>
-                <span class="order_title">Fast & Free shipping</span>
-                <span>For order from $100</span>
-
-            </p>
-        </div>
-
-        <div class="order_icon">
-            <span><i class=" icon fa-solid fa-gift fa-2x"></i></span>
-            <p>
-                <span class="order_title">Fast & Free shipping</span>
-                <span>For order from $100</span>
-
-            </p>
+        <div>
+            <i class="fa-solid fa-unlock-keyhole fa-2x"></i>
+            <p class="support_title">ONLINE SUPPORT 24/7</p>
+            <p>We're here to support to you.</p>
+            <p>Let shopping now!</p>
         </div>
     </div>
-    <div class="icon_line_clear"></div>
 
     <!-- End Icon Line -->
 
@@ -188,7 +173,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="" class="summer_explore">Explore Now</a>
+            <a href="summer.html" class="summer_explore">Explore Now</a>
         </div>
         <div class="clear"></div>
         <!-- End Summer Collection -->
@@ -213,7 +198,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="" class="rainy_explore">Explore Now</a>
+            <a href="rainy.html" class="rainy_explore">Explore Now</a>
         </div>
         <div class="clear"></div>
         <!-- End Rainy Collection -->
@@ -241,16 +226,16 @@
                     </li>
                 </ul>
             </div>
-            <a href="" class="winter_explore">Explore Now</a>
+            <a href="winter.html" class="winter_explore">Explore Now</a>
         </div>
         <div class="clear"></div>
         <!-- End Winter Collection -->
 
         <!-- Start Nightout Collection -->
-        <div class="rainy">
+        <div class="nightout">
             <img src="images/nightout_background.jpg" alt="" class="rainy_img">
             <div class="rainy_paragraph">
-                <h3 class="winter_head"><span>Explore</span> The Greated Nightout Collection</h3>
+                <h3 class="winter_head"><span>Explore</span> The Greated Night Out Collection</h3>
                 <ul class="rainy_text">
                     <li>
                         Choosing the right fragrance for a night out can make a lasting impression.
@@ -269,7 +254,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="" class="rainy_explore">Explore Now</a>
+            <a href="nightout.html" class="rainy_explore">Explore Now</a>
         </div>
         <div class="clear"></div>
         <!-- End Nightout Collection -->
@@ -280,8 +265,8 @@
     <div class="footer_group">
         <div class="footer">
             <div class="footer_about">
-                <h2>Luxury Perfume</h2>
-                <hr class="footer_divided">
+                <h3>Luxury Perfume</h3>
+                <hr class="footer_headline">
                 <ul>
                     <li>
                         Luxury Perfume acknowledges the traditional custodians of the land on which we operate and gather.
@@ -290,30 +275,33 @@
                         We pay our respect to Elders past and present, and extend that respect to all Aboriginal and Torres Strait Islander peoples today.
                     </li>
                 </ul>
+                
+                <p class="footer_social">
+                    <a href=""><i class="fa-brands fa-facebook fa-2x footer_icon"></i></a>
+                    <a href=""><i class="fa-brands fa-square-instagram fa-2x footer_icon"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter fa-2x footer_icon"></i></a>
+                    <a href=""><i class="fa-brands fa-youtube fa-2x footer_icon"></i></a>
+                </p>
             </div>
             <div>
+                <h3 class="quick_head">Quick Links</h3>
+                <hr class="quick_line">
                 <a href="index.html" class="footer_nav">Home</a>
-                <a href="about.html" class="footer_nav">Contact</a>
-            </div>
-            <div>
+                <a href="ourstory.html" class="footer_nav">About</a>
                 <a href="product.html" class="footer_nav">Product</a>
-                <a href="news.html" class="footer_nav">About</a>
-                <a href="register.html" class="footer_nav">Register</a>
+                <h3 class="help_head">Help</h3>
+                <a href="terms.html" class="footer_nav">Terms & Conditions</a>
+                <a href="ourstory.html" class="footer_nav">Our Story</a>
             </div>
             <div class="footer_adress">
-                <p><i class="fa-solid fa-house"></i> Pathein Township</p>
+                <h3>Contact Info</h3>
+                <hr class="quick_line">
+                <p><i class="fa-solid fa-house"></i> Pathein Township, Ayeyarwaddy Region, Myanmar</p>
                 <p><i class="fa-solid fa-phone"></i> 09-957068157</p>
-                <p><i class="fa-solid fa-envelope"></i>  aunghtikelynn23599@gmail.com</p>
+                <p><i class="fa-solid fa-envelope"></i>  luxuryperfume@gmail.com</p>
             </div>
         </div>
         <div>
-            <p class="footer_social">
-                <a href=""><i class="fa-brands fa-facebook fa-2x footer_icon"></i></a>
-                <a href=""><i class="fa-brands fa-square-instagram fa-2x footer_icon"></i></a>
-                <a href=""><i class="fa-brands fa-twitter fa-2x footer_icon"></i></a>
-                <a href=""><i class="fa-brands fa-youtube fa-2x footer_icon"></i></a>
-                <a href=""><i class="fa-brands fa-tiktok fa-2x footer_icon"></i></a>
-            </p>
             <hr class="divided">
             <p class="the_end">&copy; 2024 Luxury Perfume | All right resereved</p>
         </div>
