--- a/CSS/Perfume_Project/contact.html
+++ b/CSS/Perfume_Project/contact.html
@@ -42,29 +42,29 @@
     <div class="contact_us">
         <div>
             <i class="fa-regular fa-envelope fa-2x"></i>
-            <p>EMAIL ENQUIRY</p>
+            <p class="contactus_head">EMAIL ENQUIRY</p>
             <p>Mon-Fri 8am-10pm</p>
-            <p>Sat-Sun 10am-5pm</p>
+            <p class="contactus_time">Sat-Sun 10am-5pm</p>
             <p>Well's get back to you within 24 hours,</p>
-            <p>Monday through Sunday.</p>
+            <p class="contactus_link">Monday through Sunday.</p>
             <a href="https://mail.google.com">Send us an email</a>
         </div>
         <div>
             <i class="fa-solid fa-mobile-screen fa-2x"></i>
-            <p>CALL US</p>
+            <p class="contactus_head">CALL US</p>
             <p>Mon-Fri 8am-10pm</p>
-            <p>Sat-Sun 10am-5pm</p>
+            <p class="contactus_time">Sat-Sun 10am-5pm</p>
             <p>Want to talk to a person? We'e always up</p>
-            <p>for a chat.</p>
+            <p class="contactus_link">for a chat.</p>
             <a href="">Call us</a>
         </div>
         <div>
             <i class="fa-regular fa-message fa-2x"></i>
-            <p>LIVE CHAT</p>
+            <p class="contactus_head">LIVE CHAT</p>
             <p>Mon-Fri 8am-10pm</p>
-            <p>Sat-Sun 10am-5pm</p>
+            <p class="contactus_time">Sat-Sun 10am-5pm</p>
             <p>Prefer texting? Start a Messenger with</p>
-            <p>one of our team.</p>
+            <p class="contactus_link">one of our team.</p>
             <a href="https://www.facebook.com">Start Messenger</a>
         </div>
     </div>
