--- a/CSS/Perfume_Project/product.html
+++ b/CSS/Perfume_Project/product.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="font/static">
 </head>
 <body>
-     <!-- Start Nav -->
-     <div class="nav">
+    <!-- Start Nav -->
+    <div class="nav">
         <a href=""><img src="images/Logo_3.PNG" alt="" class="nav_logo"></a>
         <ul class="nav_item">
             <input type="text" id="" name="" class="nav_input"><button class="nav_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -19,9 +19,9 @@
             <li><a href="product.html">Product</a></li>
             <li><a href="ourstory.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
-            <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
-            <li><a href="index.html" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
+            <li><a href="login.html"><i class="fa-regular fa-user"></i></a></li>
+            <li><a href=""><i class="fa-regular fa-heart fa-xl"></i></a></li>
+            <li><a href="" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
         </ul>
     </div>
     <!-- End Nav -->
@@ -56,7 +56,7 @@
         <div>
             <p class="item_head">Perseus</p>
             <p class="brand_name">Parfums de Marly</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 371.25</p>
             <p class="brand_rate">7.6 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Parfums de Marly for men, released in 2024.</li>
@@ -75,7 +75,7 @@
         <div class="item_text">
             <p class="item_head">Le Beau Paradise Garden</p>
             <p class="brand_name">Jean Paul Gaultier</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 224.95</p>
             <p class="brand_rate">7.2 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Jean Paul Gaultier for men, released in 2024.</li>
@@ -94,7 +94,7 @@
         <div>
             <p class="item_head">The Scent Elixir for Him</p>
             <p class="brand_name">Hugo Boss</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 168</p>
             <p class="brand_rate">7.6 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Hugo Boss for men, released in 2024.</li>
@@ -115,7 +115,7 @@
         <div>
             <p class="item_head">LV Lovers</p>
             <p class="brand_name">Louis Vuitton</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 320</p>
             <p class="brand_rate">7.5 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Louis Vuitton for men, released in 2024.</li>
@@ -134,7 +134,7 @@
         <div>
             <p class="item_head">Asad Zanzibar</p>
             <p class="brand_name">Lattafa</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 23.71</p>
             <p class="brand_rate">7.4 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Lattafa for men, released in 2024.<li>
@@ -153,7 +153,7 @@
         <div>
             <p class="item_head">Scandal pour Homme Absolu</p>
             <p class="brand_name">Jean Paul Gaultier</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 142</p>
             <p class="brand_rate">7.8 / 10 Ratings</p>
             <ul>
                 <li>The scent is sweet-gourmand. The longevity is above-average.</li>
@@ -173,7 +173,7 @@
         <div>
             <p class="item_head">H24 Herbes Vives</p>
             <p class="brand_name">Hermès</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 129.99</p>
             <p class="brand_rate">7.7 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Hermès for men, released in 2024.</li>
@@ -192,7 +192,7 @@
         <div>
             <p class="item_head">Homme Anniversary</p>
             <p class="brand_name">XerJoff</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 395</p>
             <p class="brand_rate">9.2 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by XerJoff for men, released in 2024.</li>
@@ -212,7 +212,7 @@
         <div>
             <p class="item_head">L'Homme Idéal Parfum</p>
             <p class="brand_name">Guerlain </p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 116.42</p>
             <p class="brand_rate">8.4 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Guerlain for men, released in 2024.</li>
@@ -233,7 +233,7 @@
         <div>
             <p class="item_head">Gentleman Society</p>
             <p class="brand_name">Givenchy</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 104.9</p>
             <p class="brand_rate">7.7 / 10 Ratings</p>
             <ul>
                 <li>A new perfume by Givenchy for men, released in 2024.</li>
@@ -284,7 +284,7 @@
         <div>
             <p class="item_head">Dior Homme Intense</p>
             <p class="brand_name">Dior</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 116</p>
             <p>RANKED 3 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.5 / 10 Ratings</p>
             <ul>
@@ -306,7 +306,7 @@
         <div class="item_text">
             <p class="item_head">Sauvage</p>
             <p class="brand_name">Dior</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 109</p>
             <p>RANKED 23 IN MEN'S PERFUME</p>
             <p class="brand_rate">7.5 / 10 Ratings</p>
             <ul>
@@ -328,7 +328,7 @@
         <div>
             <p class="item_head">L'Homme</p>
             <p class="brand_name">Prada</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 120</p>
             <p>RANKED 5 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.4 / 10 Ratings</p>
             <ul>
@@ -349,7 +349,7 @@
         <div>
             <p class="item_head">Spicebomb Extreme</p>
             <p class="brand_name">Viktor & Rolf</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 140</p>
             <p>RANKED 7 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.4 / 10 Ratings</p>
             <ul>
@@ -371,7 +371,7 @@
         <div>
             <p class="item_head">Layton</p>
             <p class="brand_name">Parfume de Marly</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 365</p>
             <p>RANKED 2 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.6 / 10 Ratings</p>
             <ul>
@@ -393,8 +393,8 @@
         <div>
             <p class="item_head">Aventus</p>
             <p class="brand_name">Creed</p>
-            <p class="item_price">Cost - $ 100</p>
-            <li>RANKED 4 IN MEN'S PERFUME</li>
+            <p class="item_price">Cost - $ 365</p>
+            <p class="brand_rate">RANKED 4 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.4 / 10 Ratings</p>
             <ul>
                 <li>A popular perfume by Creed for men, released in 2010.</li>
@@ -414,7 +414,7 @@
         <div>
             <p class="item_head">Acqua di Gio Profumo</p>
             <p class="brand_name">Giprgio Armani</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 174.99</p>
             <p>RANKED 9 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.2 / 10 Ratings</p>
             <ul>
@@ -435,7 +435,7 @@
         <div>
             <p class="item_head">Bleu de Channel</p>
             <p class="brand_name">Chanel</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 177</p>
             <p>RANKED 13 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.2 / 10 Ratings</p>
             <ul>
@@ -456,7 +456,7 @@
         <div>
             <p class="item_head">Eros</p>
             <p class="brand_name">Versace</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 130</p>
             <p>RANDED 45 IN MEN'S PERFUME</p>
             <p class="brand_rate">7.5 / 10 Ratings</p>
             <ul>
@@ -477,7 +477,7 @@
         <div>
             <p class="item_head">La Nuit de L'Homme</p>
             <p class="brand_name">Yves Saint Laurent</p>
-            <p class="item_price">Cost - $ 100</p>
+            <p class="item_price">Cost - $ 108</p>
             <p>RANKED 8 IN MEN'S PERFUME</p>
             <p class="brand_rate">8.8 / 10 Ratings</p>
             <ul>
@@ -526,7 +526,7 @@
                 <a href="product.html" class="footer_nav">Product</a>
                 <a href="contact.html" class="footer_nav">Contact</a>
                 <h3 class="help_head">Help</h3>
-                <a href="terms.html" class="footer_nav">Terms & Conditions</a>
+                <a href="term.html" class="footer_nav">Terms & Conditions</a>
                 
             </div>
             <div class="footer_adress">
