--- a/CSS/Perfume_Project/rainy.html
+++ b/CSS/Perfume_Project/rainy.html
@@ -17,11 +17,11 @@
             <input type="text" id="" name="" class="nav_input"><button class="nav_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             <li class="home"><a href="index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="ourstory.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
-            <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
-            <li><a href="index.html" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
+            <li><a href="login.html"><i class="fa-regular fa-user"></i></a></li>
+            <li><a href=""><i class="fa-regular fa-heart fa-xl"></i></a></li>
+            <li><a href="" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
         </ul>
     </div>
     <!-- End Nav -->
@@ -347,7 +347,7 @@
                 <a href="product.html" class="footer_nav">Product</a>
                 <a href="contact.html" class="footer_nav">Contact</a>
                 <h3 class="help_head">Help</h3>
-                <a href="terms.html" class="footer_nav">Terms & Conditions</a>
+                <a href="term.html" class="footer_nav">Terms & Conditions</a>
                 
             </div>
             <div class="footer_adress">
