--- a/CSS/Perfume_Project/summer.html
+++ b/CSS/Perfume_Project/summer.html
@@ -19,9 +19,9 @@
             <li><a href="product.html">Product</a></li>
             <li><a href="ourstory.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
-            <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
-            <li><a href="index.html" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
+            <li><a href="login.html"><i class="fa-regular fa-user"></i></a></li>
+            <li><a href=""><i class="fa-regular fa-heart fa-xl"></i></a></li>
+            <li><a href="" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
         </ul>
     </div>
     <!-- End Nav -->
@@ -348,7 +348,7 @@
                 <a href="product.html" class="footer_nav">Product</a>
                 <a href="contact.html" class="footer_nav">Contact</a>
                 <h3 class="help_head">Help</h3>
-                <a href="terms.html" class="footer_nav">Terms & Conditions</a>
+                <a href="term.html" class="footer_nav">Terms & Conditions</a>
                 
             </div>
             <div class="footer_adress">
