--- a/CSS/Perfume_Project/term.html
+++ b/CSS/Perfume_Project/term.html
@@ -19,14 +19,53 @@
             <li><a href="product.html">Product</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
-            <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
-            <li><a href="index.html" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
+            <li><a href="login.html"><i class="fa-regular fa-user"></i></a></li>
+            <li><a href=""><i class="fa-regular fa-heart fa-xl"></i></a></li>
+            <li><a href="" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
         </ul>
     </div>
     <!-- End Nav -->
 
-    
+    <!-- Start Legal Info -->
+    <div class="legal_para ">
+        <p class="legal_heading">LEGAL</p>
+        <P class="legal_para_title">1 .  TERMS</P>
+        <p>By accessing this website, you are agreeing to be bound by these website Terms and Conditions of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trade mark law.</p>
+        <p class="legal_para_title">2 .  USE LICENSE</p>
+        <p>Permission is granted to temporarily download one copy of the materials (information, images or software) on Luxury Perfume's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+        <ul>
+            <li>Modify or copy the materials;</li>
+            <li>Use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+            <li>Attempt to decompile or reverse engineer any software contained on Luxury Perfume's website;</li>
+            <li>Remove any copyright or other proprietary notations from the materials; or</li>
+            <li>Transfer the materials to another person or "mirror" the materials on any other server.</li>
+        </ul>
+        <p>This license shall automatically terminate if you violate any of these restrictions and may be terminated by Luxury Perfume at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</p>
+        <p class="legal_para_title">3 .  DISCLAIMER</p>
+        <p>The materials on Luxury Perfume's website are provided "as is". Luxury Perfume makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, Luxury Perfume does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet website or otherwise relating to such materials or on any sites linked to this site.</p>
+        <p class="legal_para_title">4 .  LIMITATIONS</p>
+        <p >In no event shall Luxury Perfume or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on Luxury Perfume's Internet site, even if Luxury Perfume or a Luxury Perfume authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+        <p class="legal_para_title">5 .  REVISIONS AND ERRATA</p>
+        <p>The materials appearing on Luxury Perfume's website could include technical, typographical, or photographic errors. Luxury Perfume does not warrant that any of the materials on its website are accurate, complete, or current. Luxury Perfume may make changes to the materials contained on its website at any time without notice. Luxury Perfume does not, however, make any commitment to update the materials.</p>
+        <p class="legal_para_title">6 .  LINKS</p>
+        <p>Luxury Perfume has not reviewed all of the sites linked to its Internet website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Luxury Perfume of the site. Use of any such linked website is at the user's own risk.</p>
+        <p class="legal_para_title">7 .  SITE TERMS OF USE MODIFICATIONS</p>
+        <p>Luxury Perfume may revise these terms of use for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these Terms and Conditions of Use.</p>
+        <p class="legal_para_title">8 .  GOVERNING LAW</p>
+        <p>Any claim relating to Luxury Perfume's website shall be governed by the laws of the State of New South Wales without regard to its conflict of law provisions.</p>
+        <p class="legal_para_title">9 .  PRIVACY POLICY</p>
+        <p>Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy. For more detailed information, see our full Privacy Policy.</p>
+        <ul>
+            <li>We will collect and use of personal information solely with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual concerned or as required by law.</li>
+            <li>We will only retain personal information as long as necessary for the fulfillment of those purposes.</li>
+            <li>We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual providing it.</li>
+            <li>Personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.</li>
+            <li>We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.</li>
+            <li>We will make readily available to customers information about our policies and practices relating to the management of personal information.</li>
+        </ul>
+        <p>We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained.</p>
+    </div>
+    <!-- End Legal Info -->
 
     <!-- Start Icon Line -->
     <div class="support">
@@ -49,7 +88,6 @@
             <p>Let shopping now!</p>
         </div>
     </div>
-
     <!-- End Icon Line -->
 
     <!-- start footer -->
@@ -82,7 +120,7 @@
                 <a href="product.html" class="footer_nav">Product</a>
                 <a href="contact.html" class="footer_nav">Contact</a>
                 <h3 class="help_head">Help</h3>
-                <a href="terms.html" class="footer_nav">Terms & Conditions</a>
+                <a href="term.html" class="footer_nav">Terms & Conditions</a>
                 
             </div>
             <div class="footer_adress">
