--- a/CSS/Perfume_Project/register.html
+++ b/CSS/Perfume_Project/register.html
@@ -50,7 +50,7 @@
                 </div>
                 <div>
                     <input type="checkbox" name="agree" id="agree" value="agree">
-                    <label for="agree" class="label">I agree in the terms & conditions</label>
+                    <label for="agree" class="label">I agree all terms & conditions</label>
                 </div>
                 <button type="submit" class="login_btn">Log in</button>
             </form>
