--- a/JS_LECTURE/date.html
+++ b/JS_LECTURE/date.html
@@ -22,7 +22,7 @@
 
         function getSeconds(){
             let myDate = new Date();
-            let second = myDate.toLocaleString();
+            let second = myDate.getTimezoneOffset ();
             document.getElementById('myClock').innerHTML = second;
         }
 
