--- a/CSS/Perfume_Project/contact.html
+++ b/CSS/Perfume_Project/contact.html
@@ -19,7 +19,7 @@
             <li><a href="product.html">Product</a></li>
             <li><a href="ourstory.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href=""><i class="fa-regular fa-user"></i></a></li>
+            <li><a href="login.html"><i class="fa-regular fa-user"></i></a></li>
             <li><a href=""><i class="fa-regular fa-heart fa-xl"></i></a></li>
             <li><a href="" class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></a></li>
         </ul>
