--- a/JS_LECTURE/array.html
+++ b/JS_LECTURE/array.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Array</h1>
     <script>
-        let arr1 = [1,2,3];
+        let arr1 = [1,'o',3];
         console.log(arr1[1]);
         console.log(arr1.length);
 
