--- a/jQuery/TechShop/index.html
+++ b/jQuery/TechShop/index.html
@@ -14,7 +14,7 @@
         <div class="nav_item">
             <a href="" class="home">Home</a>
             <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            <span class="cart_noti">0</span>
+            <span class="cart_noti" id="count_item">0</span>
         </div>
     </div>
     <!-- End Nav -->
@@ -24,68 +24,71 @@
         <div class="item">
             <img src="images/laptop_1.jpg" alt="" class="laptop_img">
             <p>Laptop 1</p>
-            <p>Price : 2,300,000 MMK</p>
+            <p>Price : 2300000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="1" data-name="Laptop 1" data-price="2300000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/laptop_2.jpg" alt="" class="laptop_img">
             <p>Laptop 2</p>
-            <p>Price : 2,400,000 MMK</p>
+            <p>Price : 2400000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="2" data-name="Laptop 2" data-price="2400000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/laptop_1.jpg" alt="" class="laptop_img">
             <p>Laptop 3</p>
-            <p>Price : 2,500,000 MMK</p>
+            <p>Price : 2500000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="3" data-name="Laptop 3" data-price="2500000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/laptop_2.jpg" alt="" class="laptop_img">
             <p>Laptop 4</p>
-            <p>Price : 2,600,000 MMK</p>
+            <p>Price : 2600000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="4" data-name="Laptop 4" data-price="2600000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/phone_3.jpg" alt="" class="laptop_img">
             <p>iPhone 1</p>
-            <p>Price : 3,400,000 MMK</p>
+            <p>Price : 3400000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="5" data-name="iPhone 1" data-price="3400000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/phone_2.jpg" alt="" class="laptop_img">
             <p>iPhone 2</p>
-            <p>Price : 3,300,000 MMK</p>
+            <p>Price : 3300000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="6" data-name="iPhone 2" data-price="3300000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/phone_3.jpg" alt="" class="laptop_img">
             <p>iPhone 3</p>
-            <p>Price : 3,200,000 MMK</p>
+            <p>Price : 3200000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="7" data-name="iPhone 3" data-price="3200000">Add to Cart</a>
             </div>
         </div>
         <div class="item">
             <img src="images/phone_2.jpg" alt="" class="laptop_img">
             <p>iPhone 4</p>
-            <p>Price : 3,100,000 MMK</p>
+            <p>Price : 3100000 MMK</p>
             <div class="cart_div">
-                <a href="" class="laptop_cart">Add to Cart</a>
+                <a class="laptop_cart addToCart" data-id="8" data-name="iPhone 4" data-price="3100000">Add to Cart</a>
             </div>
         </div>
     </div>
     <!-- End Selling Items -->
+
+     <script src="jquery-3.7.1.min.js"></script>
+     <script src="scripts.js"></script>
 </body>
 </html>
