--- a/jQuery/TechShop/checkout.html
+++ b/jQuery/TechShop/checkout.html
@@ -12,7 +12,7 @@
     <div class="nav">
         <p class="nav_logo">IT Shop</p>
         <div class="nav_item">
-            <a href="" class="home">Home</a>
+            <a href="index.html" class="home">Home</a>
             <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             <span class="cart_noti" id="count_item">0</span>
         </div>
@@ -33,7 +33,7 @@
 
         </tbody>
     </table>
-    <button id="orderNow">Order Now</button>
+    <button id="order_now">Order Now</button>
 
     <script src="jquery-3.7.1.min.js"></script>
     <script src="scripts.js"></script>
