--- a/jQuery/TechShop/index.html
+++ b/jQuery/TechShop/index.html
@@ -13,7 +13,7 @@
         <p class="nav_logo">IT Shop</p>
         <div class="nav_item">
             <a href="" class="home">Home</a>
-            <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+            <a href="checkout.html"><i class="fa-solid fa-cart-shopping cart"></i></a>
             <span class="cart_noti" id="count_item">0</span>
         </div>
     </div>
