--- a/BootStrap/OnlineLearning/index.html
+++ b/BootStrap/OnlineLearning/index.html
@@ -25,6 +25,142 @@
     whistlist
     -->
 
+    <!-- start nav bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid mx-md-4 mx-lg-5">
+            <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4 active active_page" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link nav_hover me-4 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Category
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">PHP</a></li>
+                            <li><a class="dropdown-item" href="#">React</a></li>
+                            <li><a class="dropdown-item" href="#">Java</a></li>
+                            <li><a class="dropdown-item" href="#">Python</a></li>
+                            <li><a class="dropdown-item" href="#">Odoo</a></li>
+                            <li><a class="dropdown-item" href="#">Go</a></li>
+                            <li><a class="dropdown-item" href="#">Kotlin</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4" href="course.html">Course</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4" href="register.html">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav_hover me-4" href="login.html">Login</a>
+                    </li>
+                </ul>
+                <form class="justify-content-end me-5">
+                    <a class="btn btn-danger btn-lg" type="button" href="course.html">Get Start</a>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <!-- end nav bar -->
+
+    <!-- start bunner -->
+    <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/carousel_1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel_text position-absolute text-white">
+                    <h3>Explore varity of quality courses and gain <br>new skills </h3>
+                    <p class="mt-lg-3 d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Dolorum nobis, molestias.</p>
+                    <div class="mt-md-4 mt-lg-5 d-none d-md-block">
+                        <button class="btn btn-danger btn-lg">Sign Up</button>
+                        <button class="btn btn-danger btn-lg ms-3">Find Course</button>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/carousel_2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel_text position-absolute text-white">
+                    <h3>Courses Upgrade your Learning <br> Skills and Upgrade Life</h3>
+                    <p class="mt-lg-3 d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Dolorum nobis, molestias.</p>
+                    <div class="mt-md-4 mt-lg-5 d-none d-md-block">
+                        <button class="btn btn-danger btn-lg">Sign Up</button>
+                        <button class="btn btn-danger btn-lg ms-3">Find Course</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="=true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <h3 class="text-center mt-5">OUR COURSE CATEGORY</h2>
+    <p class="text-center">Creative categories for students.</p>
+    <div class="container text-center">
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2 border my-2 p-3" >
+                <a href="#" class="text-decoration-none">
+                    <img src="images/course_1.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">PHP</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2 border p-3  my-2">
+                <a href="#" class="text-decoration-none">
+                    <img src="images/course_2.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">React</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2  border p-3  my-2">
+                <a href="#"  class="text-decoration-none">
+                    <img src="images/course_3.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">Java</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2  border p-3  my-2">
+                <a href="#"  class="text-decoration-none">
+                    <img src="images/course_4.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">Go</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2  border p-3  my-2">
+                <a href="#"  class="text-decoration-none">
+                    <img src="images/course_5.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">Kotlin</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2  border p-3  my-2">
+                <a href="#"  class="text-decoration-none">
+                    <img src="images/course_6.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">Python</p>
+                </a>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3 offset-lg-1 col-lg-2  border p-3  my-2">
+                <a href="#"  class="text-decoration-none">
+                    <img src="images/course_7.jpg" alt="" width="100px">
+                    <p class="mt-2 text-dark">Odoo</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="fontawesome/js/all.min.js"></script>
 </body>
