--- a/BootStrap/OnlineLearning/index.html
+++ b/BootStrap/OnlineLearning/index.html
@@ -198,8 +198,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 my-2">
-                <div class="card">
-                    <img src="images/intro_react.jpg" alt="" class="card-img-top">
+                <div class="card course_img_hidden">
+                    <img src="images/intro_react.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Start Web Development With React</a>
                         </div>
@@ -273,7 +273,6 @@
                     <i class="fa-brands fa-square-github fa-2x mx-2 text-primary"></i>
                     <i class="fa-brands fa-linkedin fa-2x mx-2 text-primary"></i>
                     <i class="fa-brands fa-instagram fa-2x mx-2 text-primary"></i>
-                </p>
             </div>
             <div class="slide card mx-2">
                 <img src="images/teacher_2.jpg" alt="" class="img-fluid rounded-circle p-3 w-75 m-auto">
