--- a/BootStrap/Top A One/index.html
+++ b/BootStrap/Top A One/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- start nav bar -->
-    <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top ">
+    <nav class="navbar navbar-expand-md nav_bg sticky-lg-top ">
         <div class="container-fluid mx-md-4 mx-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
             <button class="navbar-toggler bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
@@ -53,7 +53,7 @@
                         <a class="nav-link nav_hover me-4  text-white" href="login.html">Login</a>
                     </li>
                 </ul>
-                <form class="justify-content-end me-5 d-none d-md-block">
+                <form class="justify-content-end me-5 d-none d-lg-block">
                     <a class="btn btn-light nav_btn" type="button" href="course.html"><i class="fa-solid fa-circle-plus me-2"></i>Apply Now</a>
                 </form>
             </div>
@@ -71,8 +71,8 @@
                     <div class="text-white carousel_text ms-2 ms-md-5 ms-lg-5">
                         <p class="active_page">Enjoy smooth learning</p>
                         <h1 class="fw-bold carousel_head">Learn from Best <br>Online Course</h1>
-                        <button class="btn btn-light btn-lg">Learn More</button>
-                        <button class="btn btn-light btn-lg">Our Courses</button>
+                        <button class="btn btn-warning btn-lg text-light"><i class="fa-solid fa-circle-plus me-2"></i>Learn More</button>
+                        <button class="btn btn-light btn-lg text-warning"><i class="fa-solid fa-circle-plus me-2"></i>Our Courses</button>
                     </div>
                 </div>
             </div>
@@ -131,22 +131,189 @@
     <!-- end bunner -->
 
     <!-- start teaching method -->
-    <div class="container">
+    <div class="container pt-5 pb-5">
         <div class="row">
             <div class="col-12 col-lg-6">
                 <img src="images/about-01.jpg" alt="" class="img-fluid">
             </div>
-            <div class="col-12 col-lg-6">
-                <p class="border border-warning bg-warning bg-opacity-25 rounded p-2 w-25 text-center text-warning">Welcome</p>
-                <p class="fw-bold">Learn whenever, anyplace, at your own speed.</p>
-                <p class="border_start ps-4">A spot to furnish understudies with sufficient <br> information and abilities in an unpredictable world.</p>
+            <div class="col-12 col-lg-6  mt-4 mt-xl-0 ">
+                <p class="border border-warning bg-warning bg-opacity-25 rounded p-2 text-center text-warning tm_box">Welcome</p>
+                <p class="fw-bold tm_head">Learn whenever, anyplace, at your own speed.</p>
+                <p class="border_start ps-4 tm_title" >A spot to furnish understudies with sufficient <br> information and abilities in an unpredictable world.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+                <hr class="tm_hr">
+                <div class="row">
+                    <div class="col-12 col-sm-6 pt-2">
+                        <p class="d-inline-block pe-4"><i class="fa-solid fa-phone-volume fa-3x"></i></p>
+                        <p class="d-inline-block"><span class="fw-bold fs_phone">Phone Number</span><br><span>+95 9761746819</span></p>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <p class="d-inline-block pe-4"><i class="fa-brands fa-facebook-f fa-4x"></i></p>
+                        <p class="d-inline-block"><span class="fw-bold fs_phone">Facebook Page</span><br><span>Top A One Computer</span><br><span class="ps-5">Center</span></p>
+                        
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
     <!-- end teaching method -->
 
+    <!-- start course -->
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="offset-5 col-2 mb-2">
+                <p class="text-uppercase border border-warning bg-warning bg-opacity-25 rounded p-2 text-center text-warning mt-4 mt-xl-0 course_box">Discover New</p>
+            </div>
+        </div>
+        <h2 class="text-center fw-bold tm_head mb-5">Popular Courses</h2>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/course_4.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body">
+                            <a href="" class="card-title h3 text-decoration-none">Photoshop for Business</a>
+                        </div>
+                        <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
+                        <hr class="mx-3">
+                        <p>
+                            <span class="ms-3">350,000 MMK</span>
+                            <button class="btn btn-outline-warning float-end me-3">Join Now</button>
+                        </p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/course_5.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body">
+                            <a href="" class="card-title h3 text-decoration-none">Adobe Illustractor</a>
+                        </div>
+                        <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
+                        <hr class="mx-3">
+                        <p>
+                            <span class="ms-3">350,000 MMK</span>
+                            <button class="btn btn-outline-warning float-end me-3">Join Now</button>
+                        </p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/course_7.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body">
+                            <a href="" class="card-title h3 text-decoration-none">Vedio Editing for Busic</a>
+                        </div>
+                        <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
+                        <hr class="mx-3">
+                        <p>
+                            <span class="ms-3">350,000 MMK</span>
+                            <button class="btn btn-outline-warning float-end me-3">Join Now</button>
+                        </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end course -->
+
+    <!-- start about us -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-6">
+                <img src="images/about us.jpg" alt="" class="w-100">
+            </div>
+            <div class="col-md-12 col-lg-6 shadow bg-body-tertiary rounded  mt-4 mt-xl-0 ">
+                <div>
+                    <h1 class="tm_head fw-bold">About Us</h1>
+                    <p>There will be opportunities to study courses up to the professional level.</p>
+                    <hr class="tm_hr">
+                    <p class="fw-bold fs-4">Course</p>
+                    <p>Detailed teaching of courses that will help in the workplace.</p>
+                    <hr class="tm_hr">
+                    <p class="fw-bold fs-4">Teaching Method</p>
+                    <p>Teaching about design based on work experience; Able to teach from basic to professional level.</p>
+                    <hr class="tm_hr">
+                    <p class="fw-bold fs-4">Financial</p>
+                    <p>Having appropriate course fees set so that you don't have to worry about finances.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end about us -->
+
+    <!-- start comming soon -->
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="offset-5 col-2 mb-2">
+                <p class="text-uppercase border border-warning bg-warning bg-opacity-25 rounded p-2 text-center text-warning mt-4 mt-xl-0 course_box">Comming Soom</p>
+            </div>
+        </div>
+        <h2 class="text-center fw-bold tm_head mb-5">Up Comming Courses</h2>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/comming_1.1.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body">
+                            <a href="" class="card-title h3 text-decoration-none">Photoshop Graphic Design</a>
+                        </div>
+                        <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
+                        <hr class="mx-3">
+                        <p class="ms-3">Comming Soon ...</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/comming_2.1.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body  comming_card">
+                            <a href="" class="card-title h3 text-decoration-none">Motion Graphic Design</a>
+                        </div>
+                        <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
+                        <hr class="mx-3">
+                        <p class="ms-3">Comming Soon ...</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                <div class="card course_img_hidden">
+                    <img src="images/comming_3.1.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body comming_card">
+                            <a href="" class="card-title h3 text-decoration-none">Adobe Premier Pro</a>
+                        </div>
+                        <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
+                        <hr class="mx-3">
+                        <p class="ms-3">Comming Soon ...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end comming soon -->
+
+    <!-- start review -->
+    <div class="container my-5 mb-5">
+        <p class="tm_head fw-bold text-center">Student Reviews</p>
+        <section class="customer-logos slider">
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_1.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_2.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_3.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_4.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_5.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+            <div class="slide card mx-2 shadow">
+                <img src="images/review_6.jpg" alt="" class="img-fluid p-3 w-75 m-auto" >
+            </div>
+        </section>
+    </div>
+    <!-- end review -->
+
     <!-- start footer -->
-    <footer class="container-fluid bg-dark">
+    <footer class="container-fluid bg-dark mt-5">
         <div class="container text-white py-5">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3">
@@ -218,7 +385,40 @@
     </footer>
     <!-- end footer -->
 
+    <script src="plugin/jquery-2.2.0.min.js"></script>
+    <script src="plugin/slick.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="fontawesome/js/all.min.js"></script>
+    <script>
+        $(document).ready(function(){
+          $('.customer-logos').slick({
+              slidesToShow: 3,
+              slidesToScroll: 1,
+              autoplay: true,
+              autoplaySpeed: 1000,
+              arrows: false,
+              dots: false,
+              pauseOnHover: false,
+              responsive: [{
+                  breakpoint: 992,
+                  settings: {
+                      slidesToShow: 2
+                  }
+              },
+              {
+                  breakpoint: 768,
+                  settings: {
+                      slidesToShow: 1
+                  }
+              },
+               {
+                  breakpoint: 520,
+                  settings: {
+                      slidesToShow: 1
+                  }
+              }]
+          });
+      });
+      </script>
 </body> 
 </html>
